# ComfyUI-Autocomplete-Aaalice

./: .comfyignore  .gitignore  AGENTS.md  README.md  __init__.py  design-qa.md  package-lock.json  package.json  pyproject.toml
docs/: README_jp.md  README_zh.md
locales/en/: main.json  settings.json
locales/ja/: main.json  settings.json
locales/zh/: main.json  settings.json
locales/zh-TW/: main.json  settings.json
modules/: api.py  chinese_dictionary_service.py  completion_cache_store.py  completion_service.py  danbooru_service.py  downloader.py  live_tags_config.py  live_tags_service.py  live_tags_store.py  translation_config.py  translation_service.py  translation_store.py
tests/js/: autocomplete.test.js  candidate-ranking.test.js  chinese-dictionary-provider.test.js  danbooru-provider.test.js  input-compatibility.test.js  list-utils.test.js  live-tags.test.js  localization.test.js  lora-manager-provider.test.js  node-info.test.js  online-service-state.test.js  online-settings.test.js  popup-layout.test.js  related-tags-pagination.test.js  related-tags-results.test.js  tag-insertion.test.js  tag-presentation.test.js  translation-provider.test.js  utils.test.js
tests/python/: test_chinese_dictionary.py  test_completion_cache.py  test_live_tags.py  test_online_services.py
web/css/: autocomplete-plus.css
web/js/: autocomplete.js  candidate-ranking.js  data.js  list-utils.js  live-tags.js  localization.js  main.js  node-info.js  online-service-state.js  online-settings.js  popup-layout.js  related-tags.js  searchengine.js  settings.js  tag-insertion.js  (+2 more)
(+5 files in other folders)
