[project]
name = "comfyui-autocomplete-aaalice"
description = "Autocomplete and Related Tag display for ComfyUI"
version = "1.12.1"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/Aaalice233/ComfyUI-Autocomplete-Aaalice"
#  Used by Comfy Registry https://comfyregistry.org

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.comfy]
PublisherId = "aaalice"
DisplayName = "ComfyUI-Autocomplete-Aaalice"
Icon = "https://raw.githubusercontent.com/Aaalice233/ComfyUI-Autocomplete-Aaalice/main/assets/icon.png"
Banner = "https://raw.githubusercontent.com/Aaalice233/ComfyUI-Autocomplete-Aaalice/main/assets/banner.png"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
